adding back the fresh burger

--- a/index.html
+++ b/index.html
@@ -106,8 +106,7 @@
                                     <div>
                                        <span class="badge badge--noStock">Sin Stock</span>
                                        <h4>Hamburguesa Clasica</h4>
-                                       <p>Carne angus, queso cheddar, pepinillos, lechuga, tomate, cebolla en cubos y salsa big tasty. acompañadas de papas fritas crunch
-</p>
+                                       <p>Carne angus, queso cheddar, pepinillos, lechuga, tomate, cebolla en cubos y salsa big tasty. acompañadas de papas fritas crunch</p>
                                        <div class="badge badge--outline"><span>$6.900</span></div>
                                     </div>
                                     <img src="assets/photos/clasica.webp" alt="Hamburguesa Clasica" class="ng-star-inserted">
@@ -116,8 +115,7 @@
                                     <div>
                                        <span class="badge badge--noStock">Sin Stock</span>
                                        <h4>Hamburguesa Peruana</h4>
-                                       <p>Salsa de ají amarillo, carne de angus, salteado de tomates con cebolla morada, cilantro y papas al hilo, acompañadas de papas fritas crunch
-</p>
+                                       <p>Salsa de ají amarillo, carne de angus, salteado de tomates con cebolla morada, cilantro y papas al hilo, acompañadas de papas fritas crunch</p>
                                        <div class="badge badge--outline"><span>$7.490</span></div>
                                     </div>
                                     <img src="assets/photos/peruana.webp" alt="Hamburguesa Peruana" class="ng-star-inserted">
@@ -126,8 +124,7 @@
                                     <div>
                                        <span class="badge badge--noStock">Sin Stock</span>
                                        <h4>Hamburguesa Mushroom</h4>
-                                       <p>Carne angus, queso cheddar, cebolla grillada, champiñones grillados con mayonesa, acompañadas de papas fritas crunch
-</p>
+                                       <p>Carne angus, queso cheddar, cebolla grillada, champiñones grillados con mayonesa, acompañadas de papas fritas crunch</p>
                                        <div class="badge badge--outline"><span>$6.990</span></div>
                                     </div>
                                     <img src="assets/photos/mushroom.webp" alt="Hamburguesa Mushroom" class="ng-star-inserted">
@@ -213,6 +210,24 @@
                                        <div class="badge badge--outline"><span>$4.990</span></div>
                                     </div>
                                     <img src="assets/photos/chesse_supreme.jpeg" alt="Hamburguesa Mega Bacon" class="ng-star-inserted">
+                                 </div>
+                                 <div class="product ng-star-inserted">
+                                    <div>
+                                       <span class="badge badge--noStock">Sin Stock</span>
+                                       <h4>Hamburguesa Fresh</h4>
+                                       <p>Carne angus, coleslaw, pepinillos, queso cheddar y salsa lactonesa. Acompañadas de papas fritas</p>
+                                       <div class="badge badge--outline"><span>$6.990</span></div>
+                                    </div>
+                                    <img src="assets/photos/fresh.webp" alt="Hamburguesa Mega Bacon" class="ng-star-inserted">
+                                 </div>
+                                 <div class="product ng-star-inserted">
+                                    <div>
+                                       <span class="badge badge--noStock">Sin Stock</span>
+                                       <h4>Hamburguesa Fresh Supreme</h4>
+                                       <p>Suprema de pollo, coleslaw, pepinillos, queso cheddar y salsa lactonesa. Acompañas de papas fritas</p>
+                                       <div class="badge badge--outline"><span>$6.490</span></div>
+                                    </div>
+                                    <img src="assets/photos/fresh.webp" alt="Hamburguesa Mega Bacon" class="ng-star-inserted">
                                  </div>
                               </div>
                               <h3 id="Vienesas" class="ng-star-inserted">Vienesas</h3>
