change box name

--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
                                  <div class="product ng-star-inserted">
                                     <div>
                                        <span class="badge badge--noStock">Sin Stock</span>
-                                       <h4>BOX Single</h4>
+                                       <h4>BOX chicken Single</h4>
                                        <p>4 alitas crispy, papas fritas 200 grs, 1 Salsa a elección y bebida lata </p>
                                        <div class="badge badge--outline"><span>$4.990</span></div>
                                     </div>
@@ -109,7 +109,7 @@
                                  <div class="product ng-star-inserted">
                                     <div>
                                        <span class="badge badge--noStock">Sin Stock</span>
-                                       <h4>BOX Duo</h4>
+                                       <h4>BOX chicken Duo</h4>
                                        <p>15 Chicken Finger, 6 alitas crispy, 20 nuggets, 10 empanaditas,papas fritas 400 grs, 2 salsas a elección y Bebida de 1.5Lts</p>
                                        <div class="badge badge--outline"><span>$17.990</span></div>
                                     </div>
